<resources>
    <string name="activity_edit_template">Templates Setting</string>
    <string name="activity_setting">App Setting</string>
    <string name="activity_edit_extraction">Extraction Setting</string>
    <string name="activity_edit_command">Command Setting</string>
    <string name="activity_authenticate">Authenticate</string>
    <string name="activity_consumer">Consumer</string>
    <string name="activity_licenses">Licenses</string>
    <string name="activity_edit_tab">Tabs Setting</string>
    <string name="intent_post">Tweet</string>
    <string name="message_oauth_text">Please get PIN code at a URL below, and input it.</string>
    <string name="message_oauth_hint">PIN code</string>
    <string name="message_oauth_authenticate">Authenticate</string>
    <string name="message_consumer_text">Input ConsumerID.\n (Visit https://ses-cloud.appspot.com on PC)</string>
    <string name="message_consumer_hint">ConsumerID</string>
    <string name="message_consumer_fetch">Fetch</string>
    <string name="namestyle_s_n">ScreenName / Name</string>
    <string name="namestyle_n_s">Name / ScreenName</string>
    <string name="namestyle_s">ScreenName</string>
    <string name="namestyle_n">Name</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="page_name_post">Post</string>
    <string name="page_name_home">Home</string>
    <string name="page_name_mentions">Mentions</string>
    <string name="page_name_messages">Messages</string>
    <string name="page_name_history">History</string>
    <string name="page_name_search">Search</string>
    <string name="page_name_list">List</string>
    <string name="actionbar_setting">Setting</string>
    <string name="actionbar_services">Web sites</string>
    <string name="actionbar_report">Report to author</string>
    <string name="actionbar_favstar">Favstar</string>
    <string name="actionbar_aclog">Aclog</string>
    <string name="actionbar_twilog">Twilog</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_edit_templates">Edit templates</string>
    <string name="actionbar_edit_extraction">Edit extraction</string>
    <string name="actionbar_edit_commands">Edit commands</string>
    <string name="actionbar_edit_command_all_on">Enable all</string>
    <string name="actionbar_post">Post</string>
    <string name="actionbar_edit_tabs">Edit tabs</string>
    <string name="format_event_favorited">Favorited by %s</string>
    <string name="format_event_unfavorited">Unfavorited by %s</string>
    <string name="format_event_retweeted">Retweeted by %s</string>
    <string name="format_event_mentioned">Mentioned by %s</string>
    <string name="format_event_followed">Followed by %s</string>
    <string name="format_event_blocked">Blocked by %s</string>
    <string name="format_event_unblocked">Unblocked by %s</string>
    <string name="format_event_message">Received %s\'s message</string>
    <string name="format_status_command_nanigaja">What\'s %s</string>
    <string name="format_status_command_make_anonymous">"??? said \"%s\""</string>
    <string name="format_status_review">%1$s\r\nCommant: \r\n@%2$s ( %3$s )</string>
    <string name="text_message_to_author">" #SmileEssence @laco0416 [%s]"</string>
    <string name="setting_category_display_title">Display Setting</string>
    <string name="setting_category_display_summary">Enable at next launch.</string>
    <string name="setting_text_size_title">Text size</string>
    <string name="setting_text_size_dialog_title">Edit text tize</string>
    <string name="setting_text_size_dialog_message">Set a value between 8\-24</string>
    <string name="setting_theme_title">Theme</string>
    <string name="setting_theme_dialog_title">Choose theme</string>
    <string name="setting_namestyle_title">Name style</string>
    <string name="setting_namestyle_dialog_title">Choose name style</string>
    <string name="setting_read_morse">Enable morse</string>
    <string name="setting_extend_status_url">Extend status url</string>
    <string name="setting_extend_status_url_summary">Unstable</string>
    <string name="setting_category_system_title">System Setting</string>
    <string name="setting_safe_mode_title">Safe mode</string>
    <string name="setting_safe_mode_summary_on">Show confirm dialog</string>
    <string name="setting_safe_mode_summary_off">No confirmation</string>
    <string name="setting_resize_post_image">Resize image</string>
    <string name="setting_resize_post_image_summary">Compress large image for tweet</string>
    <string name="setting_notify_on_unfavorited_title">On unfavorited</string>
    <string name="setting_notify_on_unfavorited_summary_on">Notify</string>
    <string name="setting_notify_on_unfavorited_summary_off">No Notice</string>
    <string name="setting_timelines_title">The number of timeline getting</string>
    <string name="setting_timelines_summary_format">Get new %s tweets by refresh</string>
    <string name="setting_timelines_dialog_title">Edit number</string>
    <string name="setting_timelines_dialog_message">Set a value between 1\-200</string>
    <string name="setting_category_about_title">About</string>
    <string name="setting_delete_authentication_title">Delete authentication</string>
    <string name="setting_delete_authentication_summary">Please authenticate again on next launch</string>
    <string name="setting_delete_consumer_title">Reset consumer</string>
    <string name="setting_delete_consumer_summary">Please setup again on next launch</string>
    <string name="setting_category_account_title">Account</string>
    <string name="setting_application_information_title">Application information</string>
    <string name="setting_licenses_title">Licenses</string>
    <string name="error_setting_text_size_range">Must be between 8\-24</string>
    <string name="error_setting_text_size_not_number">Given value is not number</string>
    <string name="error_setting_timelines_range">Must be between 1\-200</string>
    <string name="error_setting_timelines_not_number">Given value is not number</string>
    <string name="error_intent_status_cannot_load">Failed to get tweet</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="post_button_tweet">Tweet</string>
    <string name="post_button_send_message">Send Message</string>
    <string name="user_detail_tweets">Tweets</string>
    <string name="user_detail_following">Following</string>
    <string name="user_detail_followers">Followers</string>
    <string name="user_detail_favorites">Favorites</string>
    <string name="user_detail_protected">Protected</string>
    <string name="user_detail_follow">Follow</string>
    <string name="user_detail_followed_is_me">This is you</string>
    <string name="user_detail_unfollow">Unfollow</string>
    <string name="user_detail_followed">Followed</string>
    <string name="user_detail_not_followed">Not Followed</string>
    <string name="user_detail_loading">Loading</string>
    <string name="user_detail_tab_info">Info</string>
    <string name="user_detail_tab_timeline">Timeline</string>
    <string name="dialog_title_about">About</string>
    <string name="dialog_licenses_notices_of_files">Notices of files:</string>
    <string name="dialog_title_licenses">Licenses</string>
    <string name="dialog_message_now_loading">Now loading…</string>
    <string name="dialog_title_add">Add</string>
    <string name="dialog_title_edit">Edit</string>
    <string name="dialog_confirm_finish_app">OK to close?</string>
    <string name="dialog_title_select_image">Select image</string>
    <string name="dialog_title_select_search_query">Select search query</string>
    <string name="dialog_confirm_commands">Execute, OK?</string>
    <string name="dialog_confirm_clear_account">Clear authentication, Really?</string>
    <string name="dialog_confirm_clear_consumer">Clear consumer, Really?</string>
    <string name="dialog_title_talk_chain">Talk View</string>
    <string name="dialog_title_select_userlist">Select a list</string>
    <string name="dialog_review_rating_text">How many favs will you give?</string>
    <string name="dialog_confirm_delete_query">Delete this query, OK?</string>
    <string name="notice_favorite_succeeded">Succeeded to favorite</string>
    <string name="notice_favorite_failed">Failed to favorite</string>
    <string name="notice_retweet_succeeded">Succeeded to retweet</string>
    <string name="notice_retweet_failed">Failed to retweet</string>
    <string name="notice_tweet_succeeded">Succeeded to tweet</string>
    <string name="notice_tweet_failed">Failed to tweet</string>
    <string name="notice_tofubuster_not_found">TofuBuster is not installed</string>
    <string name="notice_status_delete_succeeded">Succeeded to delete tweet</string>
    <string name="notice_status_delete_failed">Failed to delete tweet</string>
    <string name="notice_follow_succeeded">Succeeded to follow</string>
    <string name="notice_follow_failed">Failed to follow</string>
    <string name="notice_unfollow_succeeded">Succeeded to Unfollow</string>
    <string name="notice_unfollow_failed">Failed to unfollow</string>
    <string name="notice_block_succeeded">Succeeded to block</string>
    <string name="notice_block_failed">Failed to block</string>
    <string name="notice_unblock_succeeded">Succeeded to unblock</string>
    <string name="notice_unblock_failed">Failed to unblock</string>
    <string name="notice_r4s_succeeded">Succeeded to report</string>
    <string name="notice_r4s_failed">Failed to report</string>
    <string name="notice_message_delete_succeeded">Succeeded to delete message</string>
    <string name="notice_message_delete_failed">Failed to delete message</string>
    <string name="notice_message_send_succeeded">Succeeded to send the message</string>
    <string name="notice_message_send_failed">Failed to send the message</string>
    <string name="notice_stream_connect">Connect to stream</string>
    <string name="notice_stream_disconnect">Disconnect from stream</string>
    <string name="notice_timeline_new">Receive new %s items</string>
    <string name="notice_unfavorite_succeeded">Succeeded to unfavorite</string>
    <string name="notice_unfavorite_failed">Failed to unfavorite</string>
    <string name="notice_select_image_succeeded">Succeed to select image</string>
    <string name="notice_select_image_failed">Failed to select image</string>
    <string name="notice_not_implemented_yet">Sorry, this is not implemented yet.</string>
    <string name="notice_save_as_template">New template is saved</string>
    <string name="notice_search_text_empty">Query is empty</string>
    <string name="notice_add_to_reply">Added to reply</string>
    <string name="notice_theme_changed">Theme will be enabled on next launch</string>
    <string name="notice_cleared_account">Authentication was cleared. Please authorize on next launch</string>
    <string name="notice_cleared_consumer">Consumer was cleared. Please setup on next launch</string>
    <string name="notice_copy_clipboard">Copied to clipboard</string>
    <string name="notice_userlist_not_selected">No List is selected</string>
    <string name="notice_add_to_ignore">Added to ignore list</string>
    <string name="notice_search_query_deleted">Query was deleted</string>
    <string name="notice_query_is_empty">Query is empty</string>
    <string name="notice_no_template_exists">No template exists</string>
    <string name="notice_no_query_exists">No query exists</string>
    <string name="notice_query_saved">Query is saved</string>
    <string name="notice_tab_editted">Tab setting are enabled on next launch</string>
    <string name="notice_error_show_user">Can\'t show this user</string>
    <string name="notice_error_show_status">Can\'t show this status</string>
</resources>