<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2012-2014 lacolaco.net
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:summary="@string/setting_category_display_summary"
        android:title="@string/setting_category_display_title">
        <EditTextPreference
            android:defaultValue="10"
            android:dialogMessage="@string/setting_text_size_dialog_message"
            android:dialogTitle="@string/setting_text_size_dialog_title"
            android:key="@string/key_setting_text_size"
            android:maxLength="2"
            android:numeric="decimal"
            android:title="@string/setting_text_size_title" />
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/setting_theme_dialog_title"
            android:entries="@array/setting_theme_names"
            android:entryValues="@array/setting_theme_ids"
            android:key="@string/key_setting_theme"
            android:title="@string/setting_theme_title" />
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/setting_namestyle_dialog_title"
            android:entries="@array/setting_namestyle_names"
            android:entryValues="@array/setting_namestyle_ids"
            android:key="@string/key_setting_namestyle"
            android:title="@string/setting_namestyle_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_setting_read_morse"
            android:title="@string/setting_read_morse" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_setting_extend_status_url"
            android:summary="@string/setting_extend_status_url_summary"
            android:title="@string/setting_extend_status_url" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_category_system_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_setting_show_confirm_dialog"
            android:summaryOff="@string/setting_safe_mode_summary_off"
            android:summaryOn="@string/setting_safe_mode_summary_on"
            android:title="@string/setting_safe_mode_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_setting_resize_post_image"
            android:summary="@string/setting_resize_post_image_summary"
            android:title="@string/setting_resize_post_image" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_setting_notify_on_unfavorited"
            android:summaryOff="@string/setting_notify_on_unfavorited_summary_off"
            android:summaryOn="@string/setting_notify_on_unfavorited_summary_on"
            android:title="@string/setting_notify_on_unfavorited_title" />
        <EditTextPreference
            android:defaultValue="20"
            android:dialogMessage="@string/setting_timelines_dialog_message"
            android:dialogTitle="@string/setting_timelines_dialog_title"
            android:key="@string/key_setting_timelines"
            android:maxLength="3"
            android:summary="@string/setting_timelines_summary_format"
            android:title="@string/setting_timelines_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_category_about_title">
        <Preference
            android:key="@string/key_setting_application_information"
            android:title="@string/setting_application_information_title" />
        <Preference
            android:key="@string/key_setting_licenses"
            android:title="@string/setting_licenses_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_category_account_title">
        <Preference
            android:key="@string/key_setting_clear_account"
            android:summary="@string/setting_delete_authentication_summary"
            android:title="@string/setting_delete_authentication_title" />
        <Preference
            android:key="@string/key_setting_clear_consumer"
            android:summary="@string/setting_delete_consumer_summary"
            android:title="@string/setting_delete_consumer_title" />
    </PreferenceCategory>
</PreferenceScreen>